Support declare cairo 1 in javademo (#298)